--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demoapp1",
   "version": "1.0.0",
   "description": "Demo Application For MongoDB Connection Demo",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Purvik/NodeJS-Samples/issues"
   },
-  "homepage": "https://github.com/Purvik/NodeJS-Samples#readme"
+  "homepage": "https://github.com/Purvik/NodeJS-Samples#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.3.14"
+  }
 }
