--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Demo Application For MongoDB Connection Demo",
   "main": "app.js",
   "scripts": {
+    "start" : "node ./app.js",
+    "dev" : "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +27,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.14",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "swagger-ui": "^3.20.1"
   }
 }
